@startuml classDiagram
Title Class Diagram for dnd module

class Dice {
  -dice: Array[int]
  +roll(quantity: int, sides: int): array[int]
  +howMManyDice(maximum: int): int
}

Interface Offensive {
  +checkIfHit(): boolean
  +calculateDamage(attackRoll: int, attackPower: int): int
  +attack(): int
}

Interface Defensive {
  +calculateDamageTaken(attackPower: int): int
  +defend(): int
}

abstract class Character {
  -name: string
  -maxHitPoints: int
  -currentHitPoints: int
  +getName(): string
  +getMaxHitPoints(): int
  +getCurrentHitPoints(): int
  -setName(name: string): void
  -setMaxHitPoints(maxHitPoints: int, currentHitPoints: int): void
  -setCurrentHitPoints(currentHitPoints: int): void
  +attack(target: Character, dice: Dice): int
  +takeDamage(amount: int): void
}

class Player extends Character {

}

class Enemy extends Character {

}

class FightEncounterHandler {
  -players: Array[Player]
  -enemies: Array[Enemy]
  +startEncounter(): void
  +addPlayer(player: Player): void
  +addEnemy(enemy: Enemy): void
  +removePlayer(player: Player): void
  +removeEnemy(enemy: Enemy): void
  +getPlayers(): Array[Player]
  +getEnemies(): Array[Enemy]
  +getAllParticipants(): Array[Character]
  +decideTurnOrder(): Array[Character]
  +getCurrentTurn(): Character
  +endEncounter(): void
}

Character --> Dice : rolls
Character --> Offensive : uses
Character --> Defensive : uses
Character -->FightEncounterHandler : fights during

@enduml
